--- a/src/components/WrapUp.css
+++ b/src/components/WrapUp.css
@@ -4,6 +4,7 @@
     font-family: Montserrat;
     font-weight: 200;
     font-size: 12px;
+    margin: 2em;
   }
   button {
     border-radius: 6px;
